--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-material": "~0.10.0"
+    "angular-material": "~0.10.0",
+    "jquery": "~2.1.4"
   }
 }
